--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,12 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.20.0"
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
 
 }
 
 repositories {
-        mavenCentral()
-        jcenter()
-        maven { url 'https://jitpack.io' }
-    }
+    mavenCentral()
+    jcenter()
+    maven { url 'https://jitpack.io' }
+}
