--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.20.0"
     implementation 'com.github.GrenderG:Toasty:1.4.2'
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
 
